Fix some path and add jvm opt on make dist